# ml-experimentation-template

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
experiment/: __init__.py  predict.py  train.py
