[tool.poetry]
name = "trustly-challenge"
version = "0.1.0"
description = ""
authors = ["Ricardo Manhães Savii <ricardosavii@gmail.com>"]
packages = [
    { include = "experiment" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.5.2"
numpy = "^1.23.0"
dirty-cat = "^0.3.0"
scikit-learn = "^1.2.0"
joblib = "^1.2.0"
imblearn = "^0.0"
pydantic = "^1.10.2"
pytest = "^7.2.0"

[tool.poetry.dev-dependencies]
notebook = "^6.5.2"
pandas-profiling = {extras = ["notebook"], version = "^3.6.0"}
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
